<?xml version="1.0"?>
<package>
	<name>PTrackingBridge</name>
	<version>0.0.0</version>
	<description>The PTrackingBridge package</description>
	<maintainer email="previtali@dis.uniroma1.it">Fabio Previtali</maintainer>
	<license>LGPL v. 3.0</license>
	
	<buildtool_depend>catkin</buildtool_depend>
	
	<build_depend>geometry_msgs</build_depend>
	<build_depend>message_generation</build_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>std_msgs</build_depend>
	
	<run_depend>geometry_msgs</run_depend>
	<run_depend>message_runtime</run_depend>
	<run_depend>roscpp</run_depend>
	<run_depend>std_msgs</run_depend>
</package>
